--- a/notebooks_mri/PCM_simulate.ipynb
+++ b/notebooks_mri/PCM_simulate.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "2303ae93",
    "metadata": {},
    "outputs": [
@@ -164,6 +164,8 @@
     "# color bar:\n",
     "plt.colorbar(ScalarMappable(cmap=cmap, norm=mcolors.Normalize(vmin=vmin, vmax=vmax)), ax=ax)\n",
     "ax.set_title('True D')\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -172,7 +174,7 @@
    "id": "3dcf4ba1",
    "metadata": {},
    "source": [
-    "Make dataset"
+    "## simulate"
    ]
   },
   {
