simulations contra ipsi

--- a/notebooks_mri/simulation.ipynb
+++ b/notebooks_mri/simulation.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 134,
    "id": "c2bb9393",
    "metadata": {},
    "outputs": [
@@ -204,10 +204,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e3dbd2da",
+   "metadata": {},
+   "source": [
+    "## Component model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7bd27973",
    "metadata": {},
    "source": [
-    "## build models"
+    "### build models"
    ]
   },
   {
@@ -304,7 +312,7 @@
    "id": "f380feb3",
    "metadata": {},
    "source": [
-    "## Fit model"
+    "### Fit model"
    ]
   },
   {
@@ -387,7 +395,7 @@
    "id": "5f24bb8a",
    "metadata": {},
    "source": [
-    "## Plot predictions"
+    "### Plot predictions"
    ]
   },
   {
@@ -468,6 +476,89 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5641a2e",
+   "metadata": {},
+   "source": [
+    "## Correlation model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd39a10a",
+   "metadata": {},
+   "source": [
+    "Similar to Ariani et al 2025. \n",
+    "First, remove the mean pattern of contralateral and ipsilateral conditions. Then stack the activity patterns of the 6 contralateral conditions into one vector. Same for ipsilateral conditions into another vector. Average the stacked activity patterns across runs. Then correlate the two vectors. Repeat for each subject. This can be tested in two ways: 1- simple Pearson correlated (affected by noise) 2- PCM correlation model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc94939",
+   "metadata": {},
+   "source": [
+    "### Simple pearson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "517d68a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground Truth r = 0\n",
+      "[-0.02453508 -0.037635    0.11875059  0.03654927  0.06157053  0.08241385\n",
+      " -0.03967658  0.06907239  0.13029413 -0.11775523 -0.05546792  0.11380586]\n",
+      "Mean r: 0.028 +/- 0.023\n",
+      "T-test > 0: t(11) = 1.206, p = 0.127\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = len(D)\n",
+    "r = []\n",
+    "for i in range(N):\n",
+    "    # Average every 10 rows\n",
+    "    # This assumes the rows are ordered by condition, with 10 rows per condition.\n",
+    "    num_conditions = 6\n",
+    "    num_rows_per_condition = 10\n",
+    "    num_voxels = y_contra.shape[1]\n",
+    "    \n",
+    "    # get the contra conditions: \n",
+    "    y_contra = D[i].measurements[D[i].obs_descriptors['cond_vec'] < 6, :]\n",
+    "    y_contra_avg = y_contra.reshape(num_conditions, num_rows_per_condition, num_voxels).mean(axis=1)\n",
+    "    # remove mean across conditions:\n",
+    "    y_contra_avg = y_contra_avg - y_contra_avg.mean(axis=0)\n",
+    "    # flatten the averaged patterns:\n",
+    "    y_contra_vec = y_contra_avg.flatten()\n",
+    "    \n",
+    "    # get the ipsi conditions:\n",
+    "    y_ipsi = D[i].measurements[D[i].obs_descriptors['cond_vec'] >= 6, :]\n",
+    "    y_ipsi_avg = y_ipsi.reshape(num_conditions, num_rows_per_condition, num_voxels).mean(axis=1)\n",
+    "    # remove mean across conditions:\n",
+    "    y_ipsi_avg = y_ipsi_avg - y_ipsi_avg.mean(axis=0)\n",
+    "    # flatten the averaged patterns:\n",
+    "    y_ipsi_vec = y_ipsi_avg.flatten()\n",
+    "\n",
+    "    # concatenate the contra and ipsi patterns:\n",
+    "    r.append(np.corrcoef(y_contra_vec, y_ipsi_vec)[0,1])\n",
+    "\n",
+    "r = np.array(r)\n",
+    "print('Ground Truth r = 0')\n",
+    "print(r)\n",
+    "print(f'Mean r: {np.mean(r):.3f} +/- {stats.sem(r):.3f}')\n",
+    "\n",
+    "# t-test > 0:\n",
+    "t_stat, p_val = stats.ttest_1samp(r, 0, alternative='greater')\n",
+    "print(f'T-test > 0: t({N-1}) = {t_stat:.3f}, p = {p_val:.3f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84bd2ae4",
    "metadata": {},
    "source": [
@@ -484,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 146,
    "id": "49ab71cd",
    "metadata": {},
    "outputs": [
@@ -649,49 +740,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c7138e8",
+   "metadata": {},
+   "source": [
+    "## Correlation model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "192b7cf6",
+   "metadata": {},
+   "source": [
+    "### Simple Pearson's r"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f9534a",
+   "id": "e0b0baa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01281702  0.01772851  0.14639405  0.05951057  0.11123677  0.11410201\n",
+      " -0.00431208  0.08942654  0.15434398 -0.05715446 -0.02585539  0.11745349]\n",
+      "Mean correlation: 0.059 +/- 0.021\n",
+      "T-test > 0: t(11) = 2.813, p = 0.008\n"
+     ]
+    }
+   ],
    "source": [
-    "# centering matrix:\n",
-    "C = pcm.matrix.centering(12)\n",
+    "N = len(D)\n",
+    "r = []\n",
+    "for i in range(N):\n",
+    "    # Average every 10 rows\n",
+    "    # This assumes the rows are ordered by condition, with 10 rows per condition.\n",
+    "    num_conditions = 6\n",
+    "    num_rows_per_condition = 10\n",
+    "    num_voxels = y_contra.shape[1]\n",
+    "    \n",
+    "    # get the contra conditions:\n",
+    "    y_contra = D[i].measurements[D[i].obs_descriptors['cond_vec'] < 6, :]\n",
+    "    y_contra_avg = y_contra.reshape(num_conditions, num_rows_per_condition, num_voxels).mean(axis=1)\n",
+    "    # remove mean across conditions:\n",
+    "    y_contra_avg = y_contra_avg - y_contra_avg.mean(axis=0)\n",
+    "    # flatten the averaged patterns:\n",
+    "    y_contra_vec = y_contra_avg.flatten()\n",
+    "    \n",
+    "    # get the ipsi conditions:\n",
+    "    y_ipsi = D[i].measurements[D[i].obs_descriptors['cond_vec'] >= 6, :]\n",
+    "    y_ipsi_avg = y_ipsi.reshape(num_conditions, num_rows_per_condition, num_voxels).mean(axis=1)\n",
+    "    # remove mean across conditions:\n",
+    "    y_ipsi_avg = y_ipsi_avg - y_ipsi_avg.mean(axis=0)\n",
+    "    # flatten the averaged patterns:\n",
+    "    y_ipsi_vec = y_ipsi_avg.flatten()\n",
+    "    \n",
+    "    # concatenate the contra and ipsi patterns:\n",
+    "    r.append(np.corrcoef(y_contra_vec, y_ipsi_vec)[0,1])\n",
     "\n",
-    "# which hand reached:\n",
-    "F1 = np.zeros((12, 13))\n",
-    "F1[0:6, 0] = 1  # contra\n",
-    "F1[6: , 0] = 0  # ipsi\n",
-    "F1 = C @ F1\n",
+    "r = np.array(r)\n",
+    "print(r)\n",
+    "print(f'Mean correlation: {np.mean(r):.3f} +/- {stats.sem(r):.3f}')\n",
     "\n",
-    "# Contralateral hand\n",
-    "F2 = np.zeros((12, 13))\n",
-    "F2[0:6, 1:7] = np.eye(6)\n",
-    "F2 = C @ F2\n",
+    "# t-test > 0:\n",
+    "t_stat, p_val = stats.ttest_1samp(r, 0, alternative='greater')\n",
+    "print(f'T-test > 0: t({N-1}) = {t_stat:.3f}, p = {p_val:.3f}')\n",
     "\n",
-    "# Ipsilateral hand\n",
-    "F3 = np.zeros((12, 13))\n",
-    "F3[6: , 7:13] = np.eye(6)\n",
-    "F3 = C @ F3\n",
-    "\n",
-    "# Intrinsic interaction:\n",
-    "F4 = np.zeros((12, 13))\n",
-    "F4[0:6, 7:13] = np.eye(6)\n",
-    "F4 = C @ F4\n",
-    "\n",
-    "# Make feature model:\n",
-    "A = np.stack([F1, F2, F3, F4], axis=0)\n",
-    "M = pcm.model.FeatureModel('indep', A)\n",
-    "\n",
-    "F = A.sum(axis=0)\n",
-    "plt.figure(figsize=(6,4))\n",
-    "plt.imshow(F, cmap='RdBu_r')\n",
-    "plt.colorbar()\n",
-    "plt.xlabel('Features')\n",
-    "plt.ylabel('Conditions')\n",
-    "\n",
-    "theta_true = np.array([3, 0.5, 0.8, 1])\n",
-    "G_true, _ = M.predict(theta_true)\n",
     "\n"
    ]
   }
